--- a/deploy/cert-manager-webhook-hostinger/Chart.yaml
+++ b/deploy/cert-manager-webhook-hostinger/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for Kubernetes
+description: An Hostinger ACME DNS01 solver webhook for cert-manager
 name: cert-manager-webhook-hostinger
 version: 0.1.0
