ci: pass oci namespace to helm push

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -131,5 +131,5 @@ jobs:
           CHART_FILE: ${{ steps.package_chart.outputs.CHART_FILE_PATH }}
           OCI_NAMESPACE: ${{ github.repository_owner }}
         run: |
-          echo "Publishing chart $CHART_FILE to oci://${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
-          helm push $CHART_FILE oci://${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          echo "Publishing chart $CHART_FILE to oci://${{ env.REGISTRY }}/$OCI_NAMESPACE"
+          helm push $CHART_FILE oci://${{ env.REGISTRY }}/$OCI_NAMESPACE
