--- a/deploy/cert-manager-webhook-hostinger/templates/service.yaml
+++ b/deploy/cert-manager-webhook-hostinger/templates/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "example-webhook.fullname" . }}
+  name: {{ include "cert-manager-webhook-hostinger.fullname" . }}
   namespace: {{ .Release.Namespace | quote }}
   labels:
-    app: {{ include "example-webhook.name" . }}
-    chart: {{ include "example-webhook.chart" . }}
+    app: {{ include "cert-manager-webhook-hostinger.name" . }}
+    chart: {{ include "cert-manager-webhook-hostinger.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
@@ -16,5 +16,5 @@ spec:
       protocol: TCP
       name: https
   selector:
-    app: {{ include "example-webhook.name" . }}
+    app: {{ include "cert-manager-webhook-hostinger.name" . }}
     release: {{ .Release.Name }}
