--- a/deploy/cert-manager-webhook-hostinger/templates/rbac.yaml
+++ b/deploy/cert-manager-webhook-hostinger/templates/rbac.yaml
@@ -89,3 +89,37 @@ subjects:
     kind: ServiceAccount
     name: {{ .Values.certManager.serviceAccountName }}
     namespace: {{ .Values.certManager.namespace }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: {{ include "cert-manager-webhook-hostinger.fullname" . }}:secret-reader
+  labels:
+    app: {{ include "cert-manager-webhook-hostinger.name" . }}
+    chart: {{ include "cert-manager-webhook-hostinger.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+rules:
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get", "watch", "list"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ include "cert-manager-webhook-hostinger.fullname" . }}:secret-reader
+  labels:
+    app: {{ include "cert-manager-webhook-hostinger.name" . }}
+    chart: {{ include "cert-manager-webhook-hostinger.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: {{ include "cert-manager-webhook-hostinger.fullname" . }}:secret-reader
+subjects:
+  - apiGroup: ""
+    kind: ServiceAccount
+    # Nadaje uprawnienia ServiceAccount Twojego webhooka
+    name: {{ include "cert-manager-webhook-hostinger.fullname" . }}
+    namespace: {{ .Release.Namespace }}
