--- a/deploy/cert-manager-webhook-hostinger/templates/rbac.yaml
+++ b/deploy/cert-manager-webhook-hostinger/templates/rbac.yaml
@@ -91,9 +91,10 @@ subjects:
     namespace: {{ .Values.certManager.namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
   name: {{ include "cert-manager-webhook-hostinger.fullname" . }}:secret-reader
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ include "cert-manager-webhook-hostinger.name" . }}
     chart: {{ include "cert-manager-webhook-hostinger.chart" . }}
@@ -105,9 +106,10 @@ rules:
   verbs: ["get", "watch", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: {{ include "cert-manager-webhook-hostinger.fullname" . }}:secret-reader
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ include "cert-manager-webhook-hostinger.name" . }}
     chart: {{ include "cert-manager-webhook-hostinger.chart" . }}
@@ -115,11 +117,10 @@ metadata:
     heritage: {{ .Release.Service }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
+  kind: Role
   name: {{ include "cert-manager-webhook-hostinger.fullname" . }}:secret-reader
 subjects:
   - apiGroup: ""
     kind: ServiceAccount
-    # Nadaje uprawnienia ServiceAccount Twojego webhooka
     name: {{ include "cert-manager-webhook-hostinger.fullname" . }}
     namespace: {{ .Release.Namespace }}
